@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 10

class Auteur{
    -String : nom
    -String : prénom
    +__construct(string nom, string prenom)
}

class Livre{
    -String : isbn
    -String : titre
    -Datetime : dateParution
    -Int : nbPages
    +__construct(string isbn, string titre, Datetime dateParution, int nbPages)
}

class Catégorie{
    - String : libelle
    +__construct(string libelle)
}

class Editeur{
    - String : nom
    - String : ville
    + __construct(string nom, string ville)
}

Livre "0..*"-->"1..1 " Auteur : " est écrit par"
Livre "0..*"-->"1..1" Catégorie : " appartient"
Livre "0..*"-->"1..1" Editeur : est édité

@enduml